# lamp

./: .gitmodules  fp-lib-table  lamp.kicad_pcb  lamp.kicad_sym  lamp.lib  lamp.sch
board/v1/: fp-lib-table  lamp.pro  performance.ods  setpoint-design.ods  sym-lib-table
board/v2/: CHANGES.mkd  fp-info-cache  fp-lib-table  lamp.kicad_pcb  lamp.kicad_prl  lamp.kicad_pro  lamp.kicad_sch  lamp.sch  sym-lib-table
board/v2/bom/: ibom.html
firmware/: Cargo.toml  Makefile  default.nix  main.cc  main.cxx  memory.x  openocd.cfg  pwm.cxx  pwm.hpp  shell.nix
firmware/.cargo/: config
firmware/src/: active_state.rs  button.rs  main.rs
lamp.pretty/: QFN-16_EP_3x3_Pitch0.5mm.kicad_mod  QFN-28_4.3x4.3_Pitch0.5mm.kicad_mod
rust/: Cargo.toml  embassy.nix  memory.x  shell.nix
rust/.cargo/: config
rust/src/: button.rs  debounce.rs  main.rs  pi_loop.rs  pwm.rs
