[package]
name = "lamp"
version = "0.1.0"
authors = ["Ben Gamari <ben@smart-cactus.org>"]
edition = "2018"
resolver = "2"

[features]
nosleep = []
debug = []

[dependencies]
cortex-m = "^0.6"
cortex-m-rt = "^0.6"
cortex-m-semihosting = "^0.3"
futures = { version = "^0.3", default_features = false }
defmt = "^0.3"
defmt-rtt = "^0.3"
panic-probe = { version = "^0.3", features = ["print-defmt"] }
embassy = { path = "./embassy/embassy", features = [ "defmt", "time" ] }
embassy-stm32 = { path = "./embassy/embassy-stm32", features = [ "stm32g071c8", "defmt", "unstable-pac", "time-driver-tim2" ] }
embassy-hal-common = { path = "./embassy/embassy-hal-common" }
embassy-traits = { path = "./embassy/embassy-traits", features = ["defmt"] }
 
[dependencies.embedded-hal]
version = "^0.2"
features = [ "unproven" ]

[[bin]]
name = "lamp"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
