[package]
name = "lamp"
version = "0.1.0"
authors = ["Ben Gamari <ben@smart-cactus.org>"]
edition = "2018"

[features]
nosleep = []

[dependencies]
cortex-m = "^0.6"
cortex-m-rt = "^0.6"
cortex-m-semihosting = "^0.3"
panic-halt = "^0.2"
stm32f0 = "*"

[replace]
"spin:0.5.0" = { path = "./spin-rs" }

[dependencies.lazy_static]
version = "^1.2"
features = [ "spin_no_std" ]

[dependencies.embedded-hal]
version = "^0.2"
features = [ "unproven" ]

[dependencies.stm32f0xx-hal]
version = "0.14.0"
features = [ "stm32f030x6", "rt" ]

[[bin]]
name = "lamp"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
