[package]
name = "lamp"
version = "0.1.0"
authors = ["Ben Gamari <ben@smart-cactus.org>"]
edition = "2018"
resolver = "2"

[features]
nosleep = []
debug = []
# set logging levels here
default = [
  "defmt-default",
  # "dependency-a/defmt-trace",
]
defmt-default = []
defmt-trace = []
defmt-debug = []
defmt-info = []
defmt-warn = []
defmt-error = []

[dependencies]
cortex-m = "^0.6"
cortex-m-rt = "^0.6"
cortex-m-semihosting = "^0.3"
defmt = "0.2.0"
defmt-rtt = "0.2.0"
panic-probe = { version = "0.2.0", features = ["print-defmt"] }
embassy = { path = "./embassy/embassy", features = [ "defmt" ] }
embassy-stm32 = { path = "./embassy/embassy-stm32", features = [ "stm32g071c8", "defmt", "unstable-pac" ] }
embassy-hal-common = { path = "./embassy/embassy-hal-common" }
embassy-traits = { path = "./embassy/embassy-traits", features = ["defmt"] }

[patch.crates-io]
spin = { path = "./spin-rs" }
 
[dependencies.embedded-hal]
version = "^0.2"
features = [ "unproven" ]

[[bin]]
name = "lamp"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
